# StencilStream

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  AUX_analyze_runtime_convection.py  AUX_plot.py  AUX_plot_two.py  AbstractExecutor_8hpp_source.html  AccessorSubscript_8hpp.html  AccessorSubscript_8hpp__dep__incl.map  AccessorSubscript_8hpp__dep__incl.md5  AccessorSubscript_8hpp__incl.map  AccessorSubscript_8hpp__incl.md5  AccessorSubscript_8hpp_source.html  Architecture.html  BaseTransitionFunction_8hpp.html  BaseTransitionFunction_8hpp__incl.map  BaseTransitionFunction_8hpp__incl.md5  BaseTransitionFunction_8hpp_source.html  CMakeLists.txt  Concepts_8hpp.html  Concepts_8hpp__dep__incl.map  Concepts_8hpp__dep__incl.md5  Concepts_8hpp__incl.map  Concepts_8hpp__incl.md5  Concepts_8hpp_source.html  CounterID_8hpp_source.html  Doxyfile  ExecutionKernel_8hpp_source.html  GenericID_8hpp.html  GenericID_8hpp__dep__incl.map  GenericID_8hpp__dep__incl.md5  GenericID_8hpp__incl.map  GenericID_8hpp__incl.md5  GenericID_8hpp_source.html  Grid_8hpp_source.html  Helpers_8hpp.html  Helpers_8hpp__dep__incl.map  Helpers_8hpp__dep__incl.md5  Helpers_8hpp__incl.map  (+326 more)
.devcontainer/: Dockerfile  bashrc  devcontainer.json  setup.sh
StencilStream/: AbstractExecutor.hpp  AccessorSubscript.hpp  BaseTransitionFunction.hpp  BufferedIO.hpp  Concepts.hpp  CounterID.hpp  DefaultTransitionFunction.hpp  ExecutionCore.hpp  ExecutionKernel.hpp  ExecutionPipeline.hpp  GenericID.hpp  Grid.hpp  Helpers.hpp  IOGroup.hpp  IOGroupAccessor.hpp  IOKernel.hpp  Index.hpp  IterationSpaceInformation.hpp  MonotileExecutionKernel.hpp  MonotileExecutor.hpp  Padded.hpp  RuntimeSample.hpp  RuntimeSampleExecutor.hpp  SimpleCPUExecutor.hpp  SingleContextExecutor.hpp  SingleQueueExecutor.hpp  Stencil.hpp  StencilExecutor.hpp  StencilInfo.hpp  Tile.hpp  TilingExecutionKernel.hpp  TilingExecutor.hpp  TransitionFunction.hpp
docs/: Basic-concepts.md  Getting-started.md  header.html  (+5 more)
examples/convection/: .gitignore  CMakeLists.txt  Project.toml  ThermalConvection2D.jl  analyze_log.jl  benchmark.jl  convection.cpp  convection_baseline.cpp  convection_baseline_bench.cpp  convection_baseline_openMP.cpp  convection_prototype.cpp  convection_prototype_bench.cpp  convection_prototype_dummy.cpp  render_animation.jl  render_animation.py
examples/convection/experiments/: cuda-benchmark.json  default.json  max-res-default.json
examples/convection/scripts/: benchmark.jl  benchmark_cuda.sh  benchmark_mono.sh  render_animation.jl
examples/conway/: .gitignore  CMakeLists.standalone.txt  CMakeLists.txt  Makefile  build.sh  build_nalla.sh  build_pac.sh  conway.cpp  input.txt  stencil
examples/fdtd/: .gitignore  CMakeLists.txt  Makefile  README.md  StencilStream  build.sh  build_all_reports.sh  build_nalla.sh  build_pac.sh  experiment.py  plot_frames.py  report.sh  run.sh  simulate.sh  synthesize.sh  test_script.sh
examples/fdtd/experiments/: benchmark.json  cuda_benchmark.json  default.json  double_ring.json  four_tiles.json  full_tile.json  max_grid.json  mono_benchmark.json  offset.json  three_tiles.json  tiling_benchmark.json
examples/fdtd/scripts/: benchmark.jl  benchmark_cuda.sh  benchmark_mono.sh  benchmark_monotile.sh  benchmark_tiling.sh  plot_frames.jl  run_benchmark.sh
examples/fdtd/src/: Cell.hpp  Kernel.hpp  LUTKernel.hpp  Material.hpp  Parameters.hpp  SourceFunction.hpp  collection.hpp  defines.hpp  fdtd.cpp  file_descriptor.cpp  simulation.hpp
examples/fdtd/src/material/: CoefResolver.hpp  LUTResolver.hpp  Material.hpp  RenderResolver.hpp
examples/fdtd/src/source/: LUTSource.hpp  OnDemandSource.hpp  SourceFunction.hpp  TimeLUTSource.hpp
examples/fdtd/src/time/: LUTTimeResolver.hpp  OnDemandTimeResolver.hpp
examples/hotspot/: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_benchmark.py  benchmark.sh  build.sh  build_nalla.sh  build_pac.sh  hotspot.cpp  hotspot_baseline.cpp  hotspot_baseline_benchmark.cpp  hotspot_openmp.cpp  hotspot_prototype_benchmark.cpp  report.sh  synthesize.sh  verify_benchmark.sh
examples/hotspot/data/: input_gen.jl
examples/hotspot/scripts/: Render.ipynb  benchmark.jl  benchmark_cuda.sh  benchmark_mono.sh  benchmark_monotile.sh  benchmark_tiling.sh  build_rodinia.sh  compare_temps.sh  run_benchmark.sh  test_validity.sh
examples/jacobi/: .gitignore  CMakeLists.txt  jacobi.cpp  kernels.hpp
examples/jacobi/scripts/: benchmark.jl  benchmark.sh  benchmark_cuda.sh  benchmark_mono.sh  benchmark_monotile.sh  benchmark_tiling.sh  render.jl  synthesize.sh
tests/: .gitignore  CMakeLists.txt  GridTest.hpp  GridTest_cuda_soa.hpp  HostPipe.cpp  HostPipe.hpp  IOPipeDebugging.hpp  Makefile  Stencil.cpp  StencilExecutor.cpp  StencilUpdateTest.hpp  TimeDependentValueSupplier.cpp  TransFuncs.hpp  constants.hpp  constraint_test.cpp  main.cpp  synthesize.sh
tests/cpu/: Grid.cpp  StencilUpdate.cpp
tests/cuda/: Grid.cpp  StencilUpdate.cpp
tests/cuda-soa/: Grid.cpp  StencilUpdate.cpp
tests/fpga_io/: DualIOPipeKernels.cpp  MemoryKernels.cpp  SwitchKernels.cpp
tests/internal/: DualIOPipeKernels.cpp  MemoryKernels.cpp  SwitchKernels.cpp
tests/io/: DualIOPipeKernels.cpp
tests/monotile/: ExecutionKernel.cpp  Grid.cpp  MonotileGrid.cpp  StencilUpdate.cpp  StencilUpdateKernel.cpp
tests/monotile/internal/: StencilUpdateDesign.cpp  StencilUpdateKernel.cpp
tests/src/res/: FPGATransFunc.hpp  HostPipe.hpp  HostTransFunc.hpp  TransFuncs.hpp  constants.hpp
tests/src/synthesis/: main.cpp
tests/src/units/: CounterID.cpp  ExecutionKernel.cpp  Grid.cpp  HostPipe.cpp  IOKernel.cpp  MonotileExecutionKernel.cpp  Stencil.cpp  StencilExecutor.cpp  Tile.cpp  TilingExecutionKernel.cpp  TimeDependentValueSupplier.cpp  main.cpp
tests/src/units/monotile/: ExecutionKernel.cpp
tests/src/units/tiling/: ExecutionKernel.cpp  Grid.cpp  IOKernel.cpp  Tile.cpp
tests/tiling/: ExecutionKernel.cpp  Grid.cpp  HaloInjectionKernel.cpp  StencilUpdate.cpp  StencilUpdateKernel.cpp  Tile.cpp  TiledGrid.cpp
tests/tiling/internal/: HaloInjectionKernel.cpp  HaloTiledInputKernel.cpp  StencilUpdateKernel.cpp
(+213 files in other folders)
